[package]
name = "GuiApplication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive = "1.0.0"
eframe = {version = "0.21.3", features = ["persistence"]}
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"

tracing-subscriber = "0.3.16"
